Fixed Logo display on mobile

--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -1,13 +1,19 @@
 .landing {
   position: relative;
   width: 100%;
-  height: 100vh;
   background: black;
   color: #ffffff;
   overflow: hidden;
   background-image: url("../images/IMG_3604.jpg");
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
+  img {
+    visibility: hidden;
+  }
+  @media (min-width: 1200px) {
+    background-size: cover;
+    height: 100vh;
+  }
   .header {
     position: absolute;
     top: 1rem;
